// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should render ExpensesSummary with multiple 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $34,512.34
  </h1>
</div>
`;
